--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     background-image: url('package.png'); /* Replace with your package image */
     background-size: cover;
     cursor: pointer;
-    background-image: url('animals_package.png'); /* Update with your new image path */
+    background-image: url('dc1242d7-ebac-49fb-b838-1788ce365752.webp'); /* Update with your new image path */
 }
 
 .buttons {
